# weave

./: .dockerignore  .env.example  .gitignore  .ignore  .railwayignore  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.worker  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  launch_plan.md  llm_interface.md  package-lock.json  package.json  plan.md  pyrightconfig.json  pyrightconfig.json.backup  railway.json  railway.toml  todo.md  vector_search.md  vercel.json  worker-railway.json
backend/: .dockerignore  Dockerfile  Dockerfile.prod  Dockerfile.worker  PYDANTIC_AI_FRONTEND_GUIDE.md  main.py  pyproject.toml  pyrightconfig.json  railway.json  railway.toml  worker-railway.json  worker.py
backend/api/: admin_auth.py  auth.py  index.py
backend/api/routers/: admin.py  agents.py  campaigns.py  chat_cleanup.py  embed.py  import.py  llm.py  notes.py  search.py  sync.py
backend/db/: db.py  db_test.py  seed.sh
backend/db/seed_data/: campaigns.cql  characters.cql  constraints.cql  locations.cql  maps.cql  notes.cql  npcs.cql  relationships.cql  seed.cql  sessions.cql  (+1 more)
backend/logging/: trace.py
backend/models/: campaigns.py  characters.py  components.py  folders.py  llm.py  notes.py  schemas.py
backend/observability/: trace.py
backend/scripts/: force_clear_embeddings.py  setup_embeddings.py  setup_usage_tracking.py  test_admin_endpoints.py  test_embedding_system.py
backend/services/: __init__.py  neo4j_service.py  queue_service.py  subscription_service.py  sync_hooks.py  usage_service.py
backend/tests/: test_agent.py  test_agent_endpoint.py
(+188 files in other folders)
