[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.4",
    "neo4j>=5.28.1",
    "ollama>=0.5.1",
    "pydantic>=2.11.7",
]
